# learning-rust

./: Cargo.toml
src/: display.rs  hello.rs  primitives.rs  print.rs  slice_arrays.rs
