[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "formatted_print"
path = "src/print.rs"

[[bin]]
name = "display"
path = "src/display.rs"

[[bin]]
name = "primitives"
path = "src/primitives.rs"

[[bin]]
name = "slice_arrays"
path = "src/slice_arrays.rs"